# security-crypto-tasks

./: .gitignore  pack.sh
.github/workflows/: 5.yml
10/: notebook.ipynb
4/: Makefile  svar.md
4/1/: hello.s
4/2/: main.c  main.cpp  main.rs
5/: CMakeLists.txt  main.c  utility.h  utility_fuzzer_test.c  utility_overflow.h
6/: ANSWERS.md
6/1/: go.mod  main.go
6/2/: Makefile  README.md  go.mod  server.crt  server.key  users.json
6/2/cmd/client/: client.go
6/2/cmd/server/: server.go  user.go
6/2/internal/apitypes/: request.go
6/2/internal/hashing/: hash.go
7/: go.mod  runall.sh
7/2/: main.go
7/3/: main.go
7/4/: main.go
7/5/: main.go
8/: notebook.ipynb
9/: notebook.ipynb
